# regctl

./: .gitignore  CHANGELOG.md  CHANGELOG.yaml  Dockerfile  README.md  pyproject.toml
Ctl/: config.yaml
Ctl/dev/: compose.sh  docker-compose.yml  example.env  run.sh
Ctl/docker/: entrypoint.sh
docs/: apidocs.md  install.md  settings.md  usage.md
src/regctl/: irrexplorer.py
src/regctl/api/: cache.py  main.py  models.py
